<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/background_layout"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/baloo"
                android:text="@string/hi_student"
                android:textColor="@color/text_color"
                android:textSize="34sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/sign_in_to_continue"
                android:textColor="@color/text_color_gray"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo"
                android:text="@string/mobile_number_email"
                android:textColor="@color/text_color_gray_light"
                android:textSize="12sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.SchoolERP">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="15"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:background="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo"
                android:text="@string/password"
                android:textColor="@color/text_color_gray_light"
                android:textSize="12sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.SchoolERP"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_login_button"
                android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
                android:drawableTint="@color/white"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:fontFamily="@font/baloo"
                android:foreground="@color/transparent"
                android:text="@string/forgot_password"
                android:textColor="@color/text_color_black"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_dsc"
            android:scaleType="fitCenter"
            android:src="@drawable/img_bg_2" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>